[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Players/Sprites/jugador.png" type="Texture" id=1]
[ext_resource path="res://UI/MenuBase/menu_base.gd" type="Script" id=2]

[node name="MenuBasePanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 814.0
margin_bottom = 430.0
size_flags_horizontal = 3

[node name="VB_Clase" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 405.0
margin_bottom = 430.0
size_flags_horizontal = 3

[node name="Label_Clase" type="Label" parent="MarginContainer/HBoxContainer/VB_Clase"]
margin_right = 405.0
margin_bottom = 14.0
text = "Clase"

[node name="HBox_Fighter" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VB_Clase"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 34.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VB_Clase/HBox_Fighter"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VB_Clase/HBox_Fighter"]
margin_left = 20.0
margin_top = 1.0
margin_right = 64.0
margin_bottom = 15.0
text = "Figther"

[node name="HBox_Caballero" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VB_Clase"]
margin_top = 38.0
margin_right = 405.0
margin_bottom = 54.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VB_Clase/HBox_Caballero"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VB_Clase/HBox_Caballero"]
margin_left = 20.0
margin_top = 1.0
margin_right = 79.0
margin_bottom = 15.0
text = "Caballero"

[node name="HBox_Arquero" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VB_Clase"]
margin_top = 58.0
margin_right = 405.0
margin_bottom = 74.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VB_Clase/HBox_Arquero"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VB_Clase/HBox_Arquero"]
margin_left = 20.0
margin_top = 1.0
margin_right = 71.0
margin_bottom = 15.0
text = "Arquero"

[node name="VBox_Equipamiento" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 409.0
margin_right = 814.0
margin_bottom = 430.0
size_flags_horizontal = 3

[node name="Label_Defensa" type="Label" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_right = 405.0
margin_bottom = 14.0
text = "DEFENSA"

[node name="CB_Casco" type="CheckBox" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 42.0
text = "Casco"

[node name="CB_Pechera" type="CheckBox" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 46.0
margin_right = 405.0
margin_bottom = 70.0
text = "Pechera"

[node name="CB_Guantes" type="CheckBox" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 74.0
margin_right = 405.0
margin_bottom = 98.0
text = "Guantes"

[node name="CB_Botas" type="CheckBox" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 102.0
margin_right = 405.0
margin_bottom = 126.0
text = "Botas"

[node name="Label_Ataque" type="Label" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 130.0
margin_right = 405.0
margin_bottom = 144.0
text = "Ataque"

[node name="CB_Espada" type="CheckBox" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 148.0
margin_right = 405.0
margin_bottom = 172.0
text = "Espada"

[node name="CB_Lanza" type="CheckBox" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 176.0
margin_right = 405.0
margin_bottom = 200.0
text = "Lanza"

[node name="CB_Arco" type="CheckBox" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 204.0
margin_right = 405.0
margin_bottom = 228.0
text = "Arco"

[node name="Btn_CrearUnidad" type="Button" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 232.0
margin_right = 405.0
margin_bottom = 252.0
text = "Crear Unidad"

[node name="Btn_Cerrar" type="Button" parent="MarginContainer/HBoxContainer/VBox_Equipamiento"]
margin_top = 256.0
margin_right = 405.0
margin_bottom = 276.0
text = "Cerrar"
[connection signal="pressed" from="MarginContainer/HBoxContainer/VB_Clase/HBox_Fighter/TextureButton" to="." method="_on_FigtherTB_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VB_Clase/HBox_Caballero/TextureButton" to="." method="_on_CaballeroTB_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VB_Clase/HBox_Arquero/TextureButton" to="." method="_on_RangoTB_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBox_Equipamiento/Btn_CrearUnidad" to="." method="_on_CrearUnidadBtn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBox_Equipamiento/Btn_Cerrar" to="." method="_on_CerrarBtn_pressed"]
